--- a/CitationTool.Client/_Imports.razor
+++ b/CitationTool.Client/_Imports.razor
@@ -13,3 +13,4 @@
 @using CitationTool.Client.Components.Shared
 @using CitationTool.Client.Components.Citations
 @using CitationTool.Client.Components.Domains
+@using CitationTool.Client.Components.SavedSearches
