--- a/CitationTool.Client/Components/Citations/CitationList.razor
+++ b/CitationTool.Client/Components/Citations/CitationList.razor
@@ -23,7 +23,7 @@
 
             <div class="mb-3">
                 <label for="domainFilter" class="form-label small">Domain</label>
-                <select id="domainFilter" class="form-select form-select-sm" @bind="_selectedDomainId" @bind:after="ApplyFilters">
+                <select id="domainFilter" class="form-select form-select-sm" @bind="_selectedDomainId" @bind:after="() => ApplyFilters()">
                     <option value="">All Domains</option>
                     @foreach (var domain in _domains)
                     {
@@ -50,11 +50,11 @@
                 <div class="row g-2">
                     <div class="col-6">
                         <input type="number" class="form-control form-control-sm" placeholder="From"
-                               @bind="_filterOptions.YearFrom" @bind:after="ApplyFilters" />
+                               @bind="_filterOptions.YearFrom" @bind:after="() => ApplyFilters()" />
                     </div>
                     <div class="col-6">
                         <input type="number" class="form-control form-control-sm" placeholder="To"
-                               @bind="_filterOptions.YearTo" @bind:after="ApplyFilters" />
+                               @bind="_filterOptions.YearTo" @bind:after="() => ApplyFilters()" />
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
             </div>
             <div class="d-flex gap-2">
                 <select class="form-select form-select-sm" style="width: auto;"
-                        @bind="_filterOptions.SortBy" @bind:after="ApplyFilters">
+                        @bind="_filterOptions.SortBy" @bind:after="() => ApplyFilters()">
                     @foreach (var field in Enum.GetValues<SortField>())
                     {
                         <option value="@field">@field.GetDisplayName()</option>
